edits before rmd error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <title>Statistical population modelling for census support</title>
 
-<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -263,14 +263,14 @@ $(document).ready(function () {
 
 
 <p><img src="assets/pic/wp_logotype_gray_low.png" /></p>
-<p>This website contains the teaching materials for the <strong>Statistical Population Modelling for Census Support workshop,</strong> funded by the <a href="https://www.unfpa.org/">United Nations Population Fund</a>. It has been developped at the <a href="https://www.worldpop.org/">WorldPop Research Group</a>, University of Southampton.</p>
+<p>This website contains the teaching materials for the <strong>Statistical Population Modelling for Census Support workshop,</strong> funded by the <a href="https://www.unfpa.org/">United Nations Population Fund</a>. It has been developed at the <a href="https://www.worldpop.org/">WorldPop Research Group</a>, University of Southampton.</p>
 <p>It has been first taught to the Brazilian Stats Office, Instituto Brasileiro de Geografia e Estatística (IBGE), in October 2021.</p>
 <div id="material" class="section level2">
 <h2>Material</h2>
 <ul>
 <li><a href="tutorials/day1_presentation.html">Introduction</a></li>
-<li><a href="tutorials/tutorial1_linearRegression.html">Tutorial 1</a>: How to think like a Bayesian and build a first population model?</li>
-<li><a href="tutorials/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations?</li>
+<li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think like a Bayesian and build a first population model?</li>
+<li><a href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations?</li>
 <li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial 3</a>: How to model small-scale spatial variations?</li>
 <li><a href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial 4</a>: Advanced model diagnostics and prediction</li>
 <li><a href="tutorials/day5_presentation.html">Conclusion</a></li>
