--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Edith Darin, Douglas Leasure" />
 
 
 <title>Statistical population modelling for census support</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -257,7 +256,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Statistical population modelling for census support</h1>
-<h4 class="author">Edith Darin, Douglas Leasure</h4>
+<h4 class="date">Last compiled on 2021-09-21</h4>
 
 </div>
 
@@ -279,6 +278,11 @@ $(document).ready(function () {
 <div id="raw-code" class="section level2">
 <h2>Raw code</h2>
 <p>The raw code of the website and tutorials can be found <a href="https://github.com/wpgp/bottom-up-tutorial">here</a>.</p>
+</div>
+<div id="acknowledgements" class="section level1">
+<h1>Acknowledgements</h1>
+<p>This tutorial was written by Edith Darin from WorldPop, University of Southampton and Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford.</p>
+<p>Funding for the work was provided by the United Nations Population Fund.</p>
 <p><br></p>
 <p><br></p>
 <p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /></p>
