correct formatting issue

--- a/tutorials/day1_presentation.html
+++ b/tutorials/day1_presentation.html
@@ -288,14 +288,16 @@ class: center, middle
 
 ### 1.  Bayesian statistics are a **knowledge building process**
 ---
+class: hide_logo
 
 # A daily-life example
 
 ![](day1_presentation_files/pic/restaurant_diagram.png)
-.center[[Chapter 1, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-1.html)]
+.footnote[[Chapter 1, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-1.html)]
 
 ---
-class: middle
+class: middle, hide_logo
+
 
 .pull-left[
 ###Bayesian philosophy: 
@@ -305,9 +307,9 @@ class: middle
 
 .pull-right[
 ![](day1_presentation_files/pic/bayes_diagram.png)
-.footnote[[Chapter 1, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-1.html)]
-
 ]
+
+.footnote[[Chapter 1, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-1.html)]
 
 ---
 layout: true
