add poll question + review transition

--- a/tutorials/day1_presentation.html
+++ b/tutorials/day1_presentation.html
@@ -4,7 +4,6 @@
     <title>Statistical population modelling for census support</title>
     <meta charset="utf-8" />
     <meta name="author" content="Edith Darin" />
-    <meta name="date" content="2021-09-22" />
     <script src="day1_presentation_files/header-attrs/header-attrs.js"></script>
     <link href="day1_presentation_files/remark-css/default.css" rel="stylesheet" />
     <script src="day1_presentation_files/fabric/fabric.min.js"></script>
@@ -21,7 +20,6 @@ class: center, middle, inverse, title-slide
 # Statistical population modelling for census support
 ## Day 1
 ### Edith Darin
-### 2021-09-22
 
 ---
 
@@ -192,7 +190,7 @@ class: hide_logo
 
 
 .pull-left[
-### 4. Flexible data agregation
+### 4. Flexible data combination
 
 ]
 
@@ -212,7 +210,7 @@ background-image: url(day1_presentation_files/pic/background_griddedpop.png)
 ---
 class: inverse, center, middle
 
-# When population data with full coverage is available
+# When population data with **full spatial coverage** is available
 
 ---
 class: center, middle
@@ -239,7 +237,7 @@ https://htmlpreview.github.io/?https://github.com/wpgp/top-down-tutorial/blob/ma
 ---
 class: inverse, center, middle
 
-# When population data with full coverage is **not** available
+# When population data with full spatial coverage is **not** available
 
 ---
 class: center, middle
@@ -331,6 +329,19 @@ How do you interpret this probability?
 
 ---
 
+.center2[*An election is coming up and a pollster claims that ‘candidate A has a 0.9 probability of winning.’* 
+
+How do you interpret this probability?
+
+1. If we observe the election over and over, candidate A will win roughly 90% of the time.
+2. Candidate A is much more likely to win than to lose.
+3. The pollster’s calculation is wrong. Candidate A will either win or lose, thus their probability of winning can only be 0 or 1.]
+
+
+
+.footnote[[Chapter 1, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-1.html)]
+
+---
 .center2[*Consider two claims:* 
 
 *(1) Zuofu claims that he can predict the outcome of a coin flip. 
@@ -391,16 +402,21 @@ It summarises the plausibility of a phenomenon.
 #### Modeller's question: *Will it rain tomorrow the 27th September 2021 in the UK?*
 
 &lt;br&gt;
+--
 
 **Prior proability model**: &lt;br /&gt;
 It rains 60% of the time in September in the UK.
 
+--
+
 **Likelihood**&lt;br /&gt;
 It is sunny today and climate models say that weather is stable in 40% of the case.
 
+--
+
 **Posterior probability model** &lt;br /&gt;
 Knowing the weather of today in the UK and climate models,
-we can update the prior information of the weather in September in the UK.
+we can update the prior information of the weather for the 27th September in the UK.
 
 ---
 # Balancing data and knwoledge
@@ -412,10 +428,11 @@ we can update the prior information of the weather in September in the UK.
 
 &lt;br&gt; 
 
+--
 As we collect more data, priors lose their influence.
 
-More details in [Chapter 2, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-2.html)
-
+.footnote[More details in [Chapter 2, Bayes Rules! An Introduction to Bayesian Modeling with R ](https://www.bayesrulesbook.com/chapter-2.html)
+]
 ---
 
 class: center, middle
@@ -424,10 +441,18 @@ class: center, middle
 ---
 # Uncertainty quantification
 
-### Sources of uncertainty &lt;br/&gt;
-- Impossible to know all relevant predictors
+--
+
+### Sources of uncertainty &lt;br /&gt;
+- Missing predictors
+--
+
 - Errors in data collection
+--
+
 - Imperfect representativity of the sample
+--
+
 - Individual variation
 
 &lt;br&gt; 
@@ -500,8 +525,8 @@ Sequences of samples probabilistically related
 
 **MCMC** &lt;br /&gt;
 1. Pick a random parameter value
-2. Evaluate how likely the value is to explain the data given the prior belief
-3. Draw another value linked depending on the goodness of the previous value
+2. Evaluate how likely the value explains the data given the prior belief and the model
+3. Draw another value depending on the goodness of the previous value
 
 --
 .pull-right[
@@ -539,8 +564,8 @@ Two step compilation process: model in `stan` code, translated to `C++` and comp
 
 &lt;br&gt;
 
-Stan Development Team. 2021. Stan Modeling Language Users Guide and Reference Manual, 2.27. https://mc-stan.org
-
+.footnote[Stan Development Team. 2021. Stan Modeling Language Users Guide and Reference Manual, 2.27. https://mc-stan.org
+]
 ---
 class: inverse, middle, center
 
@@ -564,7 +589,7 @@ Donald Rubin, David Dunson, and Aki Vehtari
 
 --
 
-4. [Bayesian Data Analisys course](https://avehtari.github.io/BDA_course_Aalto/), by Aki Vehtari
+4. [Bayesian Data Analysis course](https://avehtari.github.io/BDA_course_Aalto/), by Aki Vehtari
 
 ---
 class: inverse, middle, center
@@ -617,10 +642,22 @@ https://wpgp.github.io/bottom-up-tutorial/
 
 &lt;br&gt;
 
+--
+
 - The raw code can be found on Github: &lt;br /&gt;
 https://github.com/wpgp/bottom-up-tutorial
 
+&lt;br&gt;
 
+--
+
+- Workshop workflow:
+--
+
+  -   Guided tutorials with live presentation and review
+--
+
+  -   Between session: Github issues or e-mail: e.c.darin@soton.ac.uk
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
