--- a/tutorials/day1_presentation.html
+++ b/tutorials/day1_presentation.html
@@ -658,6 +658,11 @@ https://github.com/wpgp/bottom-up-tutorial
 --
 
   -   Between session: Github issues or e-mail: e.c.darin@soton.ac.uk
+--
+&lt;br&gt;
+
+- Workshop co-construction: **Don't hesitate to provide feedback on the content!**
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
