change defualt pen color for scribbles

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Statistical population modelling for census support</h1>
-<h4 class="date">Last compiled on 2021-09-21</h4>
+<h4 class="date">Last compiled on 2021-09-24</h4>
 
 </div>
 
@@ -281,8 +281,7 @@ $(document).ready(function () {
 </div>
 <div id="acknowledgements" class="section level1">
 <h1>Acknowledgements</h1>
-<p>This tutorial was written by Edith Darin from WorldPop, University of Southampton and Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford.</p>
-<p>Funding for the work was provided by the United Nations Population Fund.</p>
+<p>This tutorial was written by Edith Darin from WorldPop, University of Southampton and Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, with supervision from Andrew Tatem, WorldPop, University of Southampton. Funding for the work was provided by the United Nations Population Fund (UNFPA).</p>
 <p><br></p>
 <p><br></p>
 <p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /></p>
