--- a/tutorials/day1_presentation.html
+++ b/tutorials/day1_presentation.html
@@ -9,7 +9,7 @@
     <script src="day1_presentation_files/fabric/fabric.min.js"></script>
     <link href="day1_presentation_files/xaringanExtra-scribble/scribble.css" rel="stylesheet" />
     <script src="day1_presentation_files/xaringanExtra-scribble/scribble.js"></script>
-    <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
+    <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#408000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
     <link rel="stylesheet" href="css/xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="css/presentation_custom.css" type="text/css" />
   </head>
