review presentation following ajt

--- a/tutorials/day1_presentation.html
+++ b/tutorials/day1_presentation.html
@@ -84,7 +84,7 @@ bottom:-3.5em;left:0.5em;
 ---
 class: bottom, hide_logo
 
-# Introduction's outline
+# Presentation outline
 
 --
 &lt;br&gt;
@@ -385,7 +385,7 @@ class: center, middle
 $$ \text{posterior} \quad = \quad \frac{\text{prior } \cdot \text{ likelihood}}{\text{normalizing constant}} \; $$
 
 &lt;br&gt; 
-**Prior proability model** &lt;br /&gt;
+**Prior probability model** &lt;br /&gt;
 It captures our belief about the phenomenon. prior to seeing any data.
 
 **Likelihood**&lt;br /&gt;
@@ -404,7 +404,7 @@ It summarises the plausibility of a phenomenon.
 &lt;br&gt;
 --
 
-**Prior proability model**: &lt;br /&gt;
+**Prior probability model**: &lt;br /&gt;
 It rains 60% of the time in September in the UK.
 
 --
@@ -419,7 +419,7 @@ Knowing the weather of today in the UK and climate models,
 we can update the prior information of the weather for the 27th September in the UK.
 
 ---
-# Balancing data and knwoledge
+# Balancing data and knowledge
 
 &lt;br&gt;
 &lt;br&gt;
@@ -500,7 +500,7 @@ class: inverse, middle, center
 --
 
 **Monte Carlo** &lt;br /&gt;
-Estimate a parameter by generating random numbers and checking if it corrersponds to the structure
+Estimate a parameter by generating random numbers and checking if it corresponds to the structure
 
 --
 .pull-right[
@@ -513,7 +513,7 @@ Estimate a parameter by generating random numbers and checking if it correrspond
 #### **Goal**: Approximating the posterior distribution via simulation
 
 **Monte Carlo** &lt;br /&gt;
-Estimate a parameter by generating random numbers and checking if it corrersponds to the structure
+Estimate a parameter by generating random numbers and checking if it corresponds to the structure
 
 **Markov chain** &lt;br /&gt;
 Sequences of samples probabilistically related
