remove indexing of conclusion

--- a/index.html
+++ b/index.html
@@ -268,11 +268,10 @@ $(document).ready(function () {
 <h2>Material</h2>
 <ul>
 <li><a href="tutorials/day1_presentation.html">Introduction</a></li>
-<li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think like a Bayesian and build a first population model?</li>
+<li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think about population as a Bayesian?</li>
 <li><a href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations?</li>
 <li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial 3</a>: How to model small-scale spatial variations?</li>
 <li><a href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial 4</a>: Advanced model diagnostics and prediction</li>
-<li><a href="tutorials/day5_presentation.html">Conclusion</a></li>
 </ul>
 </div>
 <div id="raw-code" class="section level2">
