--- a/index.html
+++ b/index.html
@@ -276,11 +276,15 @@ $(document).ready(function () {
 </div>
 <div id="raw-code" class="section level2">
 <h2>Raw code</h2>
-<p>The raw code of the website and tutorials can be found <a href="https://github.com/wpgp/bottom-up-tutorial">here</a>.</p>
+<p>The raw code of the website and tutorials, including the R code can be found <a href="https://github.com/wpgp/bottom-up-tutorial">here</a>.</p>
 </div>
 <div id="acknowledgements" class="section level1">
 <h1>Acknowledgements</h1>
 <p>This tutorial was written by Edith Darin from WorldPop, University of Southampton and Douglas Leasure from Leverhulme Centre for Demographic Science, University of Oxford, with supervision from Andrew Tatem, WorldPop, University of Southampton. Funding for the work was provided by the United Nations Population Fund (UNFPA).</p>
+</div>
+<div id="license" class="section level1">
+<h1>License</h1>
+<p>You are free to redistribute this document under the terms of a Creative Commons Attribution-NoDerivatives 4.0 International (<a href="https://creativecommons.org/licenses/by-nd/4.0/">CC BY-ND 4.0</a>) license.</p>
 <p><br></p>
 <p><br></p>
 <p><img src="assets/pic/320px-UNFPA_logo.svg.png" width="20%" /><img src="assets/pic/wp_logo_gray_low.png" width="20%" /></p>
