--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <title>Statistical population modelling for census support</title>
 
-<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -256,7 +256,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Statistical population modelling for census support</h1>
-<h4 class="date">Last compiled on 2021-09-21</h4>
+<h4 class="date">Last compiled on 2021-10-04</h4>
 
 </div>
 
@@ -268,8 +268,8 @@ $(document).ready(function () {
 <h2>Material</h2>
 <ul>
 <li><a href="tutorials/day1_presentation.html">Introduction</a></li>
-<li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think like a Bayesian and build a first population model?</li>
-<li><a href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations?</li>
+<li><a href="tutorials/tutorial1/tutorial1_linearRegression.html">Tutorial 1</a>: How to think like a Bayesian and build a first population model? <a href="tutorials/quiz/mcq_tuto1.html">Quiz</a></li>
+<li><a href="tutorials/tutorial2/tutorial2_hierarchicalModel.html">Tutorial 2</a>: How to model large-scale spatial variations? <a href="tutorials/quiz/mcq_tuto2.html">Quiz</a></li>
 <li><a href="tutorials/tutorial3/tutorial3_covariates.html">Tutorial 3</a>: How to model small-scale spatial variations?</li>
 <li><a href="tutorials/tutorial4/tutorial4_diagnosticsPrediction.html">Tutorial 4</a>: Advanced model diagnostics and prediction</li>
 <li><a href="tutorials/day5_presentation.html">Conclusion</a></li>
